[package]
name = "jinja-worker"
version = "0.1.0"
edition = "2021"
authors = ["karin0 <karin0@gmx.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4.1"
worker-macros = "0.4.1"
console_error_panic_hook = "0.1.1"
minijinja = "2.2.0"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
futures = "0.3.30"
indexmap = { version = "2.4.0", features = ["serde"] }
